--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
   <!-- Background Video -->
-  <video autoplay muted loop id="bg-video">
-    <source src="exmachina.mp4" type="video/mp4" />
-    Your browser does not support the video tag.
-  </video>
+  <video autoplay muted loop id="bg-video" preload="auto" poster="images/video-poster.jpg">
+  <source src="exmachina.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 
   <!-- Enable Sound Button -->
   <button id="enable-sound">Enable Sound</button>
